--- a/paper.bib
+++ b/paper.bib
@@ -389,3 +389,152 @@ year = {2013}
 @misc{hp-switch,
   title = {{HP OpenFlow-enabled switches}},
   Howpublished = {\url{http://h17007.www1.hpe.com/cz/en/networking/solutions/technology/sdn/portfolio.aspx#infrastructure}},}
+
+  @article{nfv-challenge,
+    doi = {10.1109/mcom.2015.7045396},
+    url = {https://doi.org/10.1109%2Fmcom.2015.7045396},
+    year  = {2015},
+    month = {feb},
+    publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+    volume = {53},
+    number = {2},
+    pages = {90--97},
+    author = {Bo Han and Vijay Gopalakrishnan and Lusheng Ji and Seungjoon Lee},
+    title = {Network function virtualization: Challenges and opportunities for innovations},
+    journal = {{IEEE} Communications Magazine}
+  }
+
+  @article{sdn-comprehensive,
+  doi = {10.1109/jproc.2014.2371999},
+  url = {https://doi.org/10.1109%2Fjproc.2014.2371999},
+  year  = {2015},
+  month = {jan},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {103},
+  number = {1},
+  pages = {14--76},
+  author = {Diego Kreutz and Fernando M. V. Ramos and Paulo Esteves Verissimo and Christian Esteve Rothenberg and Siamak Azodolmolky and Steve Uhlig},
+  title = {Software-Defined Networking: A Comprehensive Survey},
+  journal = {Proceedings of the {IEEE}}
+}
+
+@inproceedings{nfv-challenge-direction,
+  doi = {10.1109/issrew.2014.48},
+  url = {https://doi.org/10.1109%2Fissrew.2014.48},
+  year  = {2014},
+  month = {nov},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {D. Cotroneo and L. De Simone and A.K. Iannillo and A. Lanzaro and R. Natella and Jiang Fan and Wang Ping},
+  title = {Network Function Virtualization: Challenges and Directions for Reliability Assurance},
+  booktitle = {2014 {IEEE} International Symposium on Software Reliability Engineering Workshops}
+}
+
+@article{cloud-computing-challenge,
+  doi = {10.1007/s13174-010-0007-6},
+  url = {https://doi.org/10.1007%2Fs13174-010-0007-6},
+  year  = {2010},
+  month = {apr},
+  publisher = {Springer Nature},
+  volume = {1},
+  number = {1},
+  pages = {7--18},
+  author = {Qi Zhang and Lu Cheng and Raouf Boutaba},
+  title = {Cloud computing: state-of-the-art and research challenges},
+  journal = {Journal of Internet Services and Applications}
+}
+
+@inproceedings{manage-nve,
+  doi = {10.1109/inm.2015.7140439},
+  url = {https://doi.org/10.1109%2Finm.2015.7140439},
+  year  = {2015},
+  month = {may},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Rashid Mijumbi and Joan Serrat and Juan-Luis Gorricho},
+  title = {Self-managed resources in network virtualisation environments},
+  booktitle = {2015 {IFIP}/{IEEE} International Symposium on Integrated Network Management ({IM})}
+}
+
+@article{survey-nv,
+  doi = {10.1016/j.comnet.2009.10.017},
+  url = {https://doi.org/10.1016%2Fj.comnet.2009.10.017},
+  year  = {2010},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {54},
+  number = {5},
+  pages = {862--876},
+  author = {N.M. Mosharaf Kabir Chowdhury and Raouf Boutaba},
+  title = {A survey of network virtualization},
+  journal = {Computer Networks}
+}
+
+@article{network-openflow-survey,
+  doi = {10.1109/surv.2013.081313.00105},
+  url = {https://doi.org/10.1109%2Fsurv.2013.081313.00105},
+  year  = {2014},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {16},
+  number = {1},
+  pages = {493--512},
+  author = {Adrian Lara and Anisha Kolasani and Byrav Ramamurthy},
+  title = {Network Innovation using {OpenFlow}: A Survey},
+  journal = {{IEEE} Communications Surveys {\&} Tutorials}
+}
+
+@article{survey-sdn,
+  doi = {10.1109/surv.2014.012214.00180},
+  url = {https://doi.org/10.1109%2Fsurv.2014.012214.00180},
+  year  = {2014},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {16},
+  number = {3},
+  pages = {1617--1634},
+  author = {Bruno Astuto A. Nunes and Marc Mendonca and Xuan-Nam Nguyen and Katia Obraczka and Thierry Turletti},
+  title = {A Survey of Software-Defined Networking: Past,  Present,  and Future of Programmable Networks},
+  journal = {{IEEE} Communications Surveys {\&} Tutorials}
+}
+
+@article{nfv-survey,
+  doi = {10.1109/comst.2015.2477041},
+  url = {https://doi.org/10.1109%2Fcomst.2015.2477041},
+  year  = {2016},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {18},
+  number = {1},
+  pages = {236--262},
+  author = {Rashid Mijumbi and Joan Serrat and Juan-Luis Gorricho and Niels Bouten and Filip De Turck and Raouf Boutaba},
+  title = {Network Function Virtualization: State-of-the-Art and Research Challenges},
+  journal = {{IEEE} Communications Surveys {\&} Tutorials}
+}
+
+@techreport{nfv2016,
+  author = "NFV",
+  title = "GS NFV-IFA 002 - V2.1.1 - network functions Virtualisation (NFV); acceleration technologies; VNF interfaces specification",
+  url = "http://www.etsi.org/deliver/etsi_gs/NFV-IFA/001_099/002/02.01.01_60/gs_NFV-IFA002v020101p.pdf",
+  month = {mar},
+  year = "2016"
+}
+
+@techreport{nfv2014-v121,
+  author = "NFV",
+  title = "GS NFV 003 - V1.2.1 - network functions Virtualisation (NFV); terminology for main concepts in NFV",
+  url = "http://www.etsi.org/deliver/etsi_gs/NFV/001_099/003/01.02.01_60/gs_NFV003v010201p.pdf",
+  month = {dec},
+  year = "2014"
+}
+
+@techreport{nfv2014-v111,
+  author = "NFV",
+  title = "GS NFV-MAN 001 - V1.1.1 - network functions Virtualisation (NFV); management and orchestration",
+  url = "http://www.etsi.org/deliver/etsi_gs/NFV-MAN/001_099/001/01.01.01_60/gs_nfv-man001v010101p.pdf",
+  month = {dec},
+  year = "2014"
+}
+
+@techreport{nfv2015,
+  author = "NFV",
+  title = "GS NFV-INF 004 - V1.1.1 - network functions Virtualisation (NFV); infrastructure; Hypervisor domain",
+  url = "http://www.etsi.org/deliver/etsi_gs/NFV-INF/001_099/004/01.01.01_60/gs_nfv-inf004v010101p.pdf",
+  month = {jan},
+  year = "2015"
+}
