--- a/paper.bib
+++ b/paper.bib
@@ -390,21 +390,21 @@ year = {2013}
   title = {{HP OpenFlow-enabled switches}},
   Howpublished = {\url{http://h17007.www1.hpe.com/cz/en/networking/solutions/technology/sdn/portfolio.aspx#infrastructure}},}
 
-  @article{nfv-challenge,
-    doi = {10.1109/mcom.2015.7045396},
-    url = {https://doi.org/10.1109%2Fmcom.2015.7045396},
-    year  = {2015},
-    month = {feb},
-    publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
-    volume = {53},
-    number = {2},
-    pages = {90--97},
-    author = {Bo Han and Vijay Gopalakrishnan and Lusheng Ji and Seungjoon Lee},
-    title = {Network function virtualization: Challenges and opportunities for innovations},
-    journal = {{IEEE} Communications Magazine}
-  }
+@article{nfv-challenge,
+  doi = {10.1109/mcom.2015.7045396},
+  url = {https://doi.org/10.1109%2Fmcom.2015.7045396},
+  year  = {2015},
+  month = {feb},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {53},
+  number = {2},
+  pages = {90--97},
+  author = {Bo Han and Vijay Gopalakrishnan and Lusheng Ji and Seungjoon Lee},
+  title = {Network function virtualization: Challenges and opportunities for innovations},
+  journal = {{IEEE} Communications Magazine}
+}
 
-  @article{sdn-comprehensive,
+@article{sdn-comprehensive,
   doi = {10.1109/jproc.2014.2371999},
   url = {https://doi.org/10.1109%2Fjproc.2014.2371999},
   year  = {2015},
@@ -537,4 +537,105 @@ year = {2013}
   url = "http://www.etsi.org/deliver/etsi_gs/NFV-INF/001_099/004/01.01.01_60/gs_nfv-inf004v010101p.pdf",
   month = {jan},
   year = "2015"
+}
+
+%frank paart
+
+@inproceedings{internet-traffic-classify,
+  doi = {10.1109/apnoms.2015.7275374},
+  url = {https://doi.org/10.1109%2Fapnoms.2015.7275374},
+  year  = {2015},
+  month = {aug},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Sung-Ho Lee and Jun-Sang Park and Sung-Ho Yoon and Myung-Sup Kim},
+  title = {High performance payload signature-based Internet traffic classification system},
+  booktitle = {2015 17th Asia-Pacific Network Operations and Management Symposium ({APNOMS})}
+}
+
+@inproceedings{payload-signature-calssify,
+  doi = {10.1109/apnoms.2016.7737287},
+  url = {https://doi.org/10.1109%2Fapnoms.2016.7737287},
+  year  = {2016},
+  month = {oct},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Young-Hoon Goo and  Kyu-Seok Shim and  Su-Kang Lee and Myung-Sup Kim},
+  title = {Payload signature structure for accurate application traffic classification},
+  booktitle = {2016 18th Asia-Pacific Network Operations and Management Symposium ({APNOMS})}
+}
+
+@inproceedings{traffic-classify-ensemble,
+  doi = {10.1109/icspcc.2015.7338810},
+  url = {https://doi.org/10.1109%2Ficspcc.2015.7338810},
+  year  = {2015},
+  month = {sep},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Yaojun Ding},
+  title = {A method of imbalanced traffic classification based on ensemble learning},
+  booktitle = {2015 {IEEE} International Conference on Signal Processing,  Communications and Computing ({ICSPCC})}
+}
+
+@inproceedings{classify-aggregate,
+  doi = {10.1109/cimsim.2015.15},
+  url = {https://doi.org/10.1109%2Fcimsim.2015.15},
+  year  = {2015},
+  month = {jul},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Lekshmi M Nair and G P Sajeev},
+  title = {Internet Traffic Classification by Aggregating Correlated Decision Tree Classifier},
+  booktitle = {2015 Seventh International Conference on Computational Intelligence,  Modelling and Simulation ({CIMSim})}
+}
+
+@inproceedings{classify-naive-bayes,
+  doi = {10.1109/iraniancee.2015.7146216},
+  url = {https://doi.org/10.1109%2Firaniancee.2015.7146216},
+  year  = {2015},
+  month = {may},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Fatemeh Ghofrani and Azizollah Jamshidi and Alireza Keshavarz-Haddad},
+  title = {Internet traffic classification using Hidden Naive Bayes model},
+  booktitle = {2015 23rd Iranian Conference on Electrical Engineering}
+}
+
+@inproceedings{multiple-classifier,
+  doi = {10.1109/ikt.2015.7288772},
+  url = {https://doi.org/10.1109%2Fikt.2015.7288772},
+  year  = {2015},
+  month = {may},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Fatemeh Ghofrani and Alireza Keshavarz-Haddad and Azizollah Jamshidi},
+  title = {Internet traffic classification using multiple classifiers},
+  booktitle = {2015 7th Conference on Information and Knowledge Technology ({IKT})}
+}
+
+@inproceedings{enhance-performance-traffic,
+  doi = {10.1109/compsac.2015.50},
+  url = {https://doi.org/10.1109%2Fcompsac.2015.50},
+  year  = {2015},
+  month = {jul},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Sophon Mongkolluksamee and Vasaka Visoottiviseth and Kensuke Fukuda},
+  title = {Enhancing the Performance of Mobile Traffic Identification with Communication Patterns},
+  booktitle = {2015 {IEEE} 39th Annual Computer Software and Applications Conference}
+}
+
+@incollection{ground-truth-classify,
+  doi = {10.1007/978-3-319-04918-2_10},
+  url = {https://doi.org/10.1007%2F978-3-319-04918-2_10},
+  year  = {2014},
+  publisher = {Springer Nature},
+  pages = {98--108},
+  author = {Valent{\'{\i}}n Carela-Espa{\~{n}}ol and Tomasz Bujlow and Pere Barlet-Ros},
+  title = {Is Our Ground-Truth for Traffic Classification Reliable?},
+  booktitle = {Passive and Active Measurement}
+}
+
+@inproceedings{Iwai2016,
+  doi = {10.1109/apnoms.2016.7737226},
+  url = {https://doi.org/10.1109%2Fapnoms.2016.7737226},
+  year  = {2016},
+  month = {oct},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Takamitsu Iwai and Akihiro Nakao},
+  title = {Adaptive mobile application identification through in-network machine learning},
+  booktitle = {2016 18th Asia-Pacific Network Operations and Management Symposium ({APNOMS})}
 }
