--- a/paper.bib
+++ b/paper.bib
@@ -639,3 +639,33 @@ year = {2013}
   title = {Adaptive mobile application identification through in-network machine learning},
   booktitle = {2016 18th Asia-Pacific Network Operations and Management Symposium ({APNOMS})}
 }
+
+@article{TinKamHo1998,
+  doi = {10.1109/34.709601},
+  url = {https://doi.org/10.1109%2F34.709601},
+  year  = {1998},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {20},
+  number = {8},
+  pages = {832--844},
+  author = {Tin Kam Ho},
+  title = {The random subspace method for constructing decision forests},
+  journal = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence}
+}
+
+@inproceedings{muc4,
+  author = {Chinchor, Nancy},
+  title = {MUC-4 Evaluation Metrics},
+  booktitle = {Proceedings of the 4th Conference on Message Understanding},
+  series = {MUC4 '92},
+  year = {1992},
+  isbn = {1-55860-273-9},
+  location = {McLean, Virginia},
+  pages = {22--29},
+  numpages = {8},
+  url = {http://dx.doi.org/10.3115/1072064.1072067},
+  doi = {10.3115/1072064.1072067},
+  acmid = {1072067},
+  publisher = {Association for Computational Linguistics},
+  address = {Stroudsburg, PA, USA},
+}
